@@ -10,6 +10,11 @@
 
     <properties>
         <jetty.version>9.2.13.v20150730</jetty.version>
+        <java.xms>5m</java.xms>
+        <java.xmx>40m</java.xmx>
+        <java.memory.opts>-Xms${java.xms} -Xmx${java.xmx}</java.memory.opts>
+        <java.gc.print.otps>-XX:-HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=logs/heap_dump.hprof -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -verbose:gc</java.gc.print.otps>
+        <java.gc.log.dir>-Xloggc:logs/gc.log</java.gc.log.dir>
     </properties>
 
     <build>
